@@ -41,6 +41,14 @@
       \sQuote{Writing R Extensions} for how to use it).
     }
   }
+  
+  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
+    \itemize{
+      \item The \command{libtool} script generated by
+      \command{configure} has been updated to support FreeBSD 10
+      (\PR{16410}).
+    }
+  }
 
   \subsection{BUG FIXES}{
     \itemize{
